--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-    <base href="/">
+    <base href="./">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!--    <script src="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.js"></script>-->
